# FairPRS-Clin

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: 1000g_panel_to_groups.py  1kg_groups.tsv  1kg_hg38_groups.tsv  config_existing_scores.yaml  config_plink2.yaml  pgs000036_1kg_real.sscore  pgs000036_1kg_scores.csv  reproduce_analysis.py  toy_groups.tsv  toy_outcomes.tsv  toy_scores.csv
src/fairprs_clin/: __init__.py  calibration.py  cli.py  equity.py  evaluate.py  io.py  pipeline.py  plots.py  portability.py  recalibration.py  report.py  scoring.py  utils.py
tests/: test_equity.py  test_evaluate.py  test_io.py  test_novel_algorithms.py
