[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairprs-clin"
version = "0.4.0"
description = "Ancestry-stratified PRS evaluation with novel APS, BGR, and RCFT algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Minahal Aisha"}]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "pyyaml>=6.0",
  "tabulate>=0.8",
  "scipy>=1.9",
  "scikit-learn>=1.1",
]

[project.scripts]
fairprs-clin = "fairprs_clin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
